--- a/musica.html
+++ b/musica.html
@@ -219,7 +219,7 @@
 
     <div class="disc-wrap">
       <div class="disc paused" id="disc">
-        <img id="cover" src="/images/,.png" alt="Portada">
+        <img id="cover" src="/images/por.png" alt="Portada">
       </div>
       <div class="meta-small">
         <h3>TE AMO</h3>
@@ -329,3 +329,4 @@
 
 </body>
 </html>
+
